--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li class="nav-item"></li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-               informações
+               Informações
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#">Informacoes</a>
@@ -47,7 +47,7 @@
         <option selected>Menu</option>
         <option value="1">Categoria</option>
         <option value="2">Tamanho</option>
-        <option value="3">informações</option>
+        <option value="3">Informações</option>
       </select>
       </div>
       <div class="separador">
@@ -192,29 +192,27 @@
         </div>
       </div>
     </div>
-    <strong style="font-size: 30px;"> Formulario do Cliente</strong>
     <div class="formulario">
+      <strong style="font-size: 30px;"> Formulario do Cliente</strong>
     <form>
-      <div class="form-group ">
+      <div class="form-group">
         <label for="exampleInputEmail1">Endereço de email</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Seu email">
-        <small id="emailHelp" class="form-text text-muted">Nunca vamos compartilhar seu email, com ninguém.</small>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Seu email" required>
         <div class="form-group">
           <label for="exampleInputPassword1">Senha</label>
-          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha" required>
         </div>
       </div>
       <div class="form-group">
         <label for="exampleInputEmail1">Telefone</label>
-        <input type="Tel" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Seu Telefone">
+        <input type="Tel" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Seu Telefone" required>
       </div>
       <div class="form-group">
         <label for="exampleInputEmail1">Cep</label>
-        <input type="number" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Seu cep">
+        <input type="number" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Seu cep" required>
       </div>
       <div class="form-group form-check">
         <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Clique em mim</label>
       </div>
       <button type="submit" class="btn btn-primary" id="enviar">Enviar</button>
     </form>
@@ -230,7 +228,7 @@
                 <li><span><img src="images/network/telephone-forward-fill.svg" alt="telefone">Fale Conosco</span></li>
               </ul>
               <ul id="network">
-                <li><img src="images/network/instagram.png" alt="instagram">instagram</li>
+                <li><img src="images/network/instagram.png" alt="instagram">Instagram</li>
                 <li><img src="images/network/facebook.png" alt="facebook">Facebook</li>
                 <li><img src="images/network/twitter.svg" alt="twitter">Twitter</li>
                 <li><img src="images/network/youtube.svg" alt="youtube">Youtube</li>
